...
            switch indexPath.row {
            case TrackerTypeSections.category.rawValue:
                cell.layer.maskedCorners = [.layerMinXMinYCorner, .layerMaxXMinYCorner]
                cell.backgroundColor = UIColor(named: "YP Gray")?.withAlphaComponent(0.3)
                //cell.titleLabel.text = NSLocalizedString("categories", comment: "")
                cell.setTitleLabelText(with: "categories")
                cell.accessibilityIdentifier = "CategoryCell"
            case TrackerTypeSections.schedule.rawValue:
                cell.layer.maskedCorners = [.layerMinXMaxYCorner, .layerMaxXMaxYCorner]
                cell.backgroundColor = UIColor(named: "YP Gray")?.withAlphaComponent(0.3)
                //cell.titleLabel.text = NSLocalizedString("schedule", comment: "")
                cell.setTitleLabelText(with: "schedule")
                cell.accessibilityIdentifier = "ScheduleCell"
                cell.separatorInset = UIEdgeInsets(top: 0, left: 0, bottom: 0, right: tableView.bounds.width)
            default:
                return
            }
        } else {
            cell.layer.masksToBounds = true
...
