...
    }
    
    ///MARK: - Setup UI
    private func setupCard() {
        card.layer.cornerRadius = 16
        card.layer.masksToBounds = true
        card.accessibilityIdentifier = "trackerBackground"
        card.translatesAutoresizingMaskIntoConstraints = false
        
        NSLayoutConstraint.activate([
            card.heightAnchor.constraint(equalToConstant: 90),
            card.widthAnchor.constraint(equalToConstant: contentView.frame.width)
        ])
...
                }
                
                let deleteAction = UIAction(title: NSLocalizedString("delete", comment: ""), attributes: .destructive) { [weak self] _ in
                    self?.deleteTrackerHandler?(tracker)
                }
                
                deleteAction.accessibilityIdentifier = "deleteTracker"
                
                return UIMenu(title: "", children: [pinAction, editAction, deleteAction])
            }
        )
    }
}
...
