...
            image: image,
            style: .plain,
            target: self,
            action: #selector(addTrackerButtonTap)
        )
        plusButton.tintColor = .black
        plusButton.accessibilityIdentifier = "AddTracker"
        
        datePicker.datePickerMode = .date
        datePicker.preferredDatePickerStyle = .compact
        datePicker.addTarget(
            self,
            action: #selector(datePickerValueChanged(_:)),
...
        let deleteAction = UIAlertAction(
            title: NSLocalizedString("delete", comment: ""),
            style: .destructive) { [weak self] _ in
                guard let self = self else {return}
                self.presenter.deleteTracker(tracker: tracker)
            }
        deleteAction.accessibilityIdentifier = "deleteTrackerConfirmation"
        alert.addAction(deleteAction)
        alert.addAction(UIAlertAction(
            title: NSLocalizedString("cancel", comment: ""),
            style: .cancel))
        
        present(alert, animated: true)
...
