...
        newHabitButton.setTitle(NSLocalizedString("habit", comment: ""), for: .normal)
        newHabitButton.titleLabel?.font = UIFont.systemFont(ofSize: 16, weight: .medium)
        newHabitButton.titleLabel?.textColor = .white
        newHabitButton.backgroundColor = UIColor(named: "YP Black")
        newHabitButton.layer.cornerRadius = 16
        newHabitButton.addTarget(self, action: #selector(newHabitPressed), for: .touchUpInside)
        newHabitButton.accessibilityIdentifier = "NewHabit"
        newHabitButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(newHabitButton)
        
        NSLayoutConstraint.activate([
            newHabitButton.heightAnchor.constraint(equalToConstant: 60),
            newHabitButton.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor, constant: 20),
...
